[package]
name = "wasm-runtime"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
log = "0.4"
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.13"
